src/styles.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}


/* Content */


#content {
	display: flex;
	flex-direction: column;
	font-family: 'Roboto', sans-serif;
}

#header {
	flex: 1;
	display: flex;
	justify-content: center;
	text-align: center;
	padding: 1rem;
}

#main {
	flex: 10;
	display: flex;
	height: 100vh;
}



/* Header */

#header {
	background-color: #6573c3;
}

#searchBar {
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	padding: 0 0.8rem;
	border-radius: 16px;
	background-color: white;;
	width: 30%;
	display: flex;
	justify-content: space-between;
}


#searchInput {
	width: 90%;
	border: 1px solid rgba(0, 0, 0, 0);
	font-size: 15px;
	margin: 0;
	padding: 0.4rem 0.8rem;
	/* border-radius: 16px; */
	opacity: 0.7;
}

#searchBtn {
	border-radius: 16px;
}

textarea {
	height: 100%;
}

#searchInput:focus {
	outline: none !important;
	border: 0.5px solid blue;
	/* box-shadow: 0 0 10px #719ECE; */
	opacity: 1.0;
}

#searchBar button {
	border: none;
	background-color: white;
}

/* Main */

#left, #right, #center {
	/* border-top: 1px solid black; */
	height: 100vh;
}

#left {
	flex: 3;
	/* min-width: 150px; */
	max-width: 175px;
	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
}

#center {
	flex: 10;
	background-color: #F5F5F5;
	min-width: 300px;
}

#right {
	flex: 4;
	display: flex;
	flex-direction: column;
	min-width: 200px;
	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
}



/* Left Sidebar */

#lists {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	/* margin-top: 1rem; */
}

#lists div {
	/* font-family: 'Noto Sans', sans-serif; */
	padding: 0.5rem 0;
	font-size: 16px;
	cursor:pointer;
}

.list-selector {
	width: 100%;
	/* display: flex; */
	text-align: center;
	display: flex;
	justify-content: flex-start;
}

.listsLeft {
	margin-left: 1.5rem;
	margin-right: 1rem;
	width: 20px;
	pointer-events:none;
}

.listsRight {
	pointer-events:none;
}

/* .list-selector:hover {
	opacity: 1	;
	background-color: red;
} */

[data-list="All"] {
	color: #357a38;
}

[data-list="All"]:hover {
	background-color: #357a3867;
}

[data-list="Work"] {
	color: #ff5722;
}
[data-list="Work"]:hover {
	background-color: #ff562269;
}

[data-list="School"]{
	color: #2196f3;
}

[data-list="School"]:hover {
	background-color: #2195f371;
}

[data-list="Church"] {
	color: #9c27b0;
}

[data-list="Church"]:hover {
	background-color: #9b27b05e;
}


/* Cards */

#todoDisplay {
	display: flex;
	flex-direction: column;
	margin: 1.5rem;
	box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
	border-radius: 5px;
	height: 80vh;
	background-color: white;
	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
}

/* Tasks Header */

#taskHeader {
	font-size: 25px;
	font-weight: bold;
	padding: 1rem;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

#sort-btn {
	background-color: white;
	border: none;
	cursor: pointer;
	opacity: 0.8;
	transition: all 0.3s ease;
	color: #26a69a;
	font-size: 15px;
	padding: 0.4rem;
	border-radius: 5px;
}

#sort-btn:hover {
	background-color: #26a6995e;
}

/* Task List */

#tasklist {
	box-shadow: 0 2p 10px 0 rgb(0 0 0 / 10%);
	padding: 0 0.5rem;
}

.todoCard {
	height: 50px;
	display: flex;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	transition: all 0.4s cubic-bezier(.25,.8,.25,1);
	margin: 0.4rem 0.4rem;
	background-color: white;
	border-radius: 5px;
}

.todoCard:hover {
	box-shadow: 0 5px 8px rgba(0,0,0,0.25), 0 3px 3px rgba(0,0,0,0.22);
}

.priority {
	flex: 1;
	border-bottom-left-radius: 5px;
	border-top-left-radius: 5px;
}

.high {
	background-color: #f44336;
}

.medium {
	background-color: #ffeb3b;
}

.low {
	background-color: #4caf50;
}

.strike > .cardContainer> .cardBody > .cardLeft {
	text-decoration: line-through;
	color: #ddd;
}

.description {
	display: none;

	padding: 0;
	font-size: 12px;
}

.expanded {
	height: 80px;
	/* align-items:baseline; */
}


.expanded > .cardContainer > .description {
	display: block;
	/* margin: 0 2rem;
	padding: 0;
	font-size: 12px; */
	margin: 0.5rem 2.2rem;
}

.cardContainer {
	flex: 99;
	display: flex;
	justify-content: center;
	flex-direction: column;
	/* pointer-events:none; */
}

.cardBody {
	display: flex;
	justify-content: space-between;
	width: 100%;
}

.cardLeft {
	display: flex;
	align-items: center;
	margin-left: 0.5rem;
}

.todoCheckbox {
	cursor: pointer;
}

.checkbox-round {
	width: 1.2em;
	height: 1.2em;
	background-color: white;
	border-radius: 50%;
	vertical-align: middle;
	border: 1px solid darkgrey;
	-webkit-appearance: none;
	outline: none;
	cursor: pointer;
	margin-right: 0.5rem;
}

.checkbox-round:checked {
	background-color: #9e9e9e;
}

.todoTitle {
	font-size: 15px;
	text-align: center;
	justify-content: center;
	align-items: center;
	/* font-weight: bold; */
}

.cardRight {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.cardRight div {
	margin: 0.2rem;
}

.todoDate {
	font-size: 12px;
}

.todoBtns button {
	border: none;
	background-color: white;
	cursor: pointer;
}

.todoBtns button:hover {
	opacity: 0.8;
}

.editBtn {
	color: #4caf50;
}

.deleteBtn {
	color: #f44336;
}

.btn svg {
	pointer-events: none;
}

/* Modal */

#modal {
	display: none;
	flex-direction: column;
	position: fixed;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: rgb(0, 0, 0);
	background-color: rgba(0, 0, 0, 0.4);
}

#modal-content {
	display: flex;
	flex-direction: column;

	margin: 15% auto;
	width: 30%;

}

#modal-content > form > input {
	width: 100%;
}

#modal-container {
	background-color: #fefefe;
	border-radius: 5px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	min-width: 200px;
	position: relative;

}

#modal-form {
	padding: 20px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
}

#modal-form > input,
#modal-form > div {
	margin: 0.2rem;
	width: 80%;
}

#modal-close {
	position: absolute;
	display: flex;
	text-align: center;
	align-items: center;
	justify-content: center;
	right: 0;
	top: 0;
	border: none;
	border-radius: 50%;
	cursor: pointer;
	background-color: #f44336;
	color: white;
	margin: 2px;
	width: 18px;
	height: 18px;
}

#modal-close:hover {
	opacity: 0.8;
}

#editPriority {
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 12px;
}

/* Right sidebar */



#right {
	font-family: 'Roboto', sans-serif;
}

#addTodoForm {
	margin-top: 1rem;
	display: flex;
	flex-direction: column;
}

#todoTitle,
#description,
#dueDate	{
	width: 80%;
	margin: 0.5rem 1rem;
	padding: 0.5rem;
	border-radius: 5px;
	border:1px solid rgba(5, 5, 5, 5);
	font-family: 'Roboto', sans-serif;
}

#todoTitle,
#description {
	text-align: center;
}

#selectPriority {
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 12px;
}

#selectPriority > input {
	margin: 0.2rem 0.5rem;

}

#submitbtn-container {
	margin-top: 0.5rem;
	display: flex;
	justify-content: center;
}

#submitbtn,
#edit-submitbtn {
	padding: 8px;
	background-color: #4caf50;
	border-radius: 5px;
	border: 0.2px solid white;
	color: white;
	cursor: pointer;
}

#submitbtn:hover,
#edit-submitbtn:hover {
	opacity: 0.8;
}

#listSelect {
	border: 0.2 solid black;
	border-radius: 5px;
	font-family: 'Roboto', sans-serif;
	margin-top: 0.4rem;
	width: 60%;
}

#listSelectContainer {
	display: flex;
	justify-content: center;
}

@media only screen and (max-width: 650px) {
	#left { flex: 1; }
	#right { display: none; }
	.listsLeft {
		margin: 0;
		padding: 0;
	}
	.list-selector {
		justify-content: center;
	}
	.listsRight { display: none; }
}

